--- a/index.html
+++ b/index.html
@@ -3,72 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SpinkTweet - Real-time Communication</title>
+  <title>Urgent Messages</title>
   <link rel="manifest" href="manifest.json">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f4f8;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      transition: background-color 0.3s ease;
     }
     .container {
-      max-width: 600px;
-      margin: auto;
+      width: 100%;
+      max-width: 480px;
+      background-color: #fff;
       padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 20px;
+      color: #007bff;
+      transition: color 0.3s ease;
     }
     .messages {
-      background-color: white;
-      border-radius: 5px;
-      padding: 10px;
-      margin-bottom: 20px;
       max-height: 300px;
       overflow-y: auto;
+      margin-bottom: 20px;
+      padding-right: 10px;
     }
     .message {
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      padding: 12px;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      background-color: #f1f1f1;
+      transition: background-color 0.3s ease;
     }
     .message .sender {
       font-weight: bold;
+      color: #333;
     }
     .message .content {
-      margin-top: 5px;
+      margin-top: 8px;
+      color: #555;
     }
     .input-container {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      margin-top: 20px;
     }
     .input-container input {
       width: 80%;
-      padding: 10px;
-      border-radius: 5px;
+      padding: 12px;
       border: 1px solid #ccc;
+      border-radius: 50px;
+      font-size: 1rem;
+      transition: all 0.3s ease;
     }
     .input-container button {
       width: 15%;
-      padding: 10px;
+      padding: 12px;
       background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 50px;
       cursor: pointer;
+      font-size: 1rem;
+      transition: background-color 0.3s ease;
+    }
+    .input-container input:focus {
+      border-color: #007bff;
     }
     .input-container button:hover {
       background-color: #0056b3;
+    }
+    .input-container button:active {
+      background-color: #00408b;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>SpinkTweet Communication</h1>
+    <h1>Urgent Messages</h1>
     <div class="messages" id="messages">
-      <!-- Messages will be dynamically inserted here -->
+      <!-- Messages will appear here -->
     </div>
     <div class="input-container">
-      <input type="text" id="messageInput" placeholder="Type your message..." />
+      <input type="text" id="messageInput" placeholder="Type your urgent message..." />
       <button id="sendMessageBtn">Send</button>
     </div>
   </div>
@@ -121,8 +151,8 @@
     // Send message to Firestore
     const sendMessage = () => {
       const messageInput = document.getElementById("messageInput");
-      const message = messageInput.value;
-      if (message.trim() === "") return;
+      const message = messageInput.value.trim();
+      if (message === "") return;
 
       messagesRef.add({
         sender: "Oliver", // Replace with dynamic user name if needed
